--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Eduardo Zavala</title>
+    <title>"Eduardo Zavala"</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -36,7 +36,7 @@
         <h2>Contact</h2>
         <p>Email: ezavala15@icloud.com</p>
         <p>Phone Number: (702)588-0915</p>
-        <p>LinkedIn: https://www.linkedin.com/in/eduardo-zavala-4340362a4/ </p>
+        <a LinkedIn: href=https://www.linkedin.com/in/eduardo-zavala-4340362a4/ </a>
     </section>
     <footer>
         <p>&copy; 2025 Eduardo Zavala</p>
