--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <h1>My Portfolio</h1>
+        <h1>Eduardo Zavala/h1>
         <nav>
             <ul>
                 <li><a href="#about">About</a></li>
@@ -36,7 +36,7 @@
         <h2>Contact</h2>
         <p>Email: ezavala15@icloud.com</p>
         <p>Phone Number: (702)588-0915</p>
-        <a LinkedIn: href=https://www.linkedin.com/in/eduardo-zavala-4340362a4/ </a>
+        <p>LinkedIn :<a href="https://www.linkedin.com/in/eduardo-zavala-4340362a4/"></a></p>
     </section>
     <footer>
         <p>&copy; 2025 Eduardo Zavala</p>
