--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>"Eduardo Zavala"</title>
+    <title>My Portfolio</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
-        <h1>Eduardo Zavala/h1>
+        <h1>Eduardo Zavala</h1>
         <nav>
             <ul>
                 <li><a href="#about">About</a></li>
@@ -36,7 +36,7 @@
         <h2>Contact</h2>
         <p>Email: ezavala15@icloud.com</p>
         <p>Phone Number: (702)588-0915</p>
-        <p>LinkedIn :<a href="https://www.linkedin.com/in/eduardo-zavala-4340362a4/"></a></p>
+        <a href="https://www.linkedin.com/in/eduardo-zavala-4340362a4/"></a>
     </section>
     <footer>
         <p>&copy; 2025 Eduardo Zavala</p>
