--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <h2>Contact</h2>
         <p>Email: ezavala15@icloud.com</p>
         <p>Phone Number: (702)588-0915</p>
-        <a href="https://www.linkedin.com/in/eduardo-zavala-4340362a4/"</a>
+        <link href="https://www.linkedin.com/in/eduardo-zavala-4340362a4/">
     </section>
     <footer>
         <p>&copy; 2025 Eduardo Zavala</p>
