--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <h1>Eduardo Zavala</h1>
+        <h1>Eduardo Zavala<h1>
         <nav>
             <ul>
                 <li><a href="#about">About</a></li>
