--- a/index.html
+++ b/index.html
@@ -3,44 +3,76 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Portfolio</title>
+    <title>Eduardo Zavala - Resume</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
         <h1>Eduardo Zavala</h1>
-        <nav>
-            <ul>
-                <li><a href="#about">About</a></li>
-                <li><a href="#projects">Projects</a></li>
-                <li><a href="#contact">Contact</a></li>
-            </ul>
-        </nav>
+        <p>Las Vegas, NV | Bilingual | <a href="mailto:ezavala15@icloud.com">ezavala15@icloud.com</a></p>
     </header>
-    <section id="about">
-        <h2>About Me</h2>
-        <p>Growing up I have always loved tech, whether it was learning how to jailbreak my phone, coding my favorite games or even making videos. My name is Eduardo Zavala and technology has always been my passion. Currently attending CSN/UNLV, I am pursing my passion for code and getting my bachelors degree in Computer Science. Willing to further push my boundaries to learn more about coding and gaining the needed knowledge and skills to succeed in life.</p>
+
+    <section id="experience">
+        <h2>Relevant Experience</h2>
+        <h3>CIT 129 Python | College of Southern Nevada</h3>
+        <ul>
+            <li>Actively learning the basics of using Python</li>
+            <li>Learning how to use arrays and different looping methods</li>
+        </ul>
+
+        <h3>CIT 129 Raptor | College of Southern Nevada</h3>
+        <ul>
+            <li>Learning the use of Raptor as a layout for any code</li>
+            <li>Understanding arrays and looping methods in Raptor</li>
+        </ul>
+
+        <h3>Customer Service | Sam’s Club</h3>
+        <ul>
+            <li>Helping members troubleshoot account problems</li>
+            <li>Troubleshooting errors with the app or at the gas station</li>
+            <li>Cashiering and assisting members at checkout</li>
+        </ul>
     </section>
+
     <section id="projects">
         <h2>Projects</h2>
-        <div class="project">
-            <h3>Project 1</h3>
-            <p>Description of project 1.</p>
-        </div>
-        <div class="project">
-            <h3>Project 2</h3>
-            <p>Description of project 2.</p>
-        </div>
+        <h3>List of Numbers - Creator</h3>
+        <ul>
+            <li>Asks user for two numbers, ensuring the first is lower</li>
+            <li>Lists all numbers in between, categorizing them as even or odd</li>
+        </ul>
+
+        <h3>Employee Report - Creator</h3>
+        <ul>
+            <li>Calculates pay for multiple employees</li>
+            <li>Validates incorrect inputs and provides feedback</li>
+            <li>Uses arrays for employee details, hours, and pay rate</li>
+        </ul>
     </section>
-    <section id="contact">
-        <h2>Contact</h2>
-        <p>Email: ezavala15@icloud.com</p>
-        <p>Phone Number: (702)588-0915</p>
-        <a href= "https://www.linkedin.com/in/eduardo-zavala-4340362a4/">My LinkedIn</a>
+
+    <section id="education">
+        <h2>Education</h2>
+        <p><strong>College of Southern Nevada</strong> | Currently Second Year</p>
+        <p>Bachelor’s in Computer Science | Est. 2027</p>
     </section>
+
+    <section id="skills">
+        <h2>Skills</h2>
+        <ul>
+            <li>Programming: Entry-level experience with Python</li>
+            <li>Software: Microsoft Word, PowerPoint, Excel, OneNote</li>
+            <li>Operating Systems: MacOS, Windows</li>
+        </ul>
+    </section>
+
+    <section id="affiliations">
+        <h2>Affiliations & Interests</h2>
+        <p><strong>Goalkeeper Captain</strong> | Downtown Soccer Club (2020-2022)</p>
+        <p><strong>Explorer Volunteer</strong> | Las Vegas Metropolitan Police Department (2021-2023)</p>
+    </section>
+
     <footer>
-        <p>&copy; 2025 Eduardo Zavala</p>
+        <p>&copy; 2025 Eduardo Zavala | <a href="mailto:ezavala15@icloud.com">Contact Me</a></p>
     </footer>
 </body>
 </html>
-
