--- a/index.html
+++ b/index.html
@@ -3,72 +3,90 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Eduardo Zavala - Resume</title>
+    <title>Eduardo Zavala - Portfolio</title>
     <link rel="stylesheet" href="styles.css">
+    <script defer src="script.js"></script>
 </head>
 <body>
     <header>
         <h1>Eduardo Zavala</h1>
         <p>Las Vegas, NV | Bilingual | <a href="mailto:ezavala15@icloud.com">ezavala15@icloud.com</a></p>
+        <button id="theme-toggle">Toggle Light/Dark Mode</button>
     </header>
 
     <section id="experience">
         <h2>Relevant Experience</h2>
-        <h3>CIT 129 Python | College of Southern Nevada</h3>
-        <ul>
-            <li>Actively learning the basics of using Python</li>
-            <li>Learning how to use arrays and different looping methods</li>
-        </ul>
+        <div class="card">
+            <h3>CIT 129 Python | College of Southern Nevada</h3>
+            <ul>
+                <li>Actively learning the basics of using Python</li>
+                <li>Learning how to use arrays and different looping methods</li>
+            </ul>
+        </div>
 
-        <h3>CIT 129 Raptor | College of Southern Nevada</h3>
-        <ul>
-            <li>Learning the use of Raptor as a layout for any code</li>
-            <li>Understanding arrays and looping methods in Raptor</li>
-        </ul>
+        <div class="card">
+            <h3>CIT 129 Raptor | College of Southern Nevada</h3>
+            <ul>
+                <li>Learning the use of Raptor as a layout for any code</li>
+                <li>Understanding arrays and looping methods in Raptor</li>
+            </ul>
+        </div>
 
-        <h3>Customer Service | Sam’s Club</h3>
-        <ul>
-            <li>Helping members troubleshoot account problems</li>
-            <li>Troubleshooting errors with the app or at the gas station</li>
-            <li>Cashiering and assisting members at checkout</li>
-        </ul>
+        <div class="card">
+            <h3>Customer Service | Sam’s Club</h3>
+            <ul>
+                <li>Helping members troubleshoot account problems</li>
+                <li>Troubleshooting errors with the app or at the gas station</li>
+                <li>Cashiering and assisting members at checkout</li>
+            </ul>
+        </div>
     </section>
 
     <section id="projects">
         <h2>Projects</h2>
-        <h3>List of Numbers - Creator</h3>
-        <ul>
-            <li>Asks user for two numbers, ensuring the first is lower</li>
-            <li>Lists all numbers in between, categorizing them as even or odd</li>
-        </ul>
+        <div class="card">
+            <h3>List of Numbers - Creator</h3>
+            <ul>
+                <li>Asks user for two numbers, ensuring the first is lower</li>
+                <li>Lists all numbers in between, categorizing them as even or odd</li>
+            </ul>
+        </div>
 
-        <h3>Employee Report - Creator</h3>
-        <ul>
-            <li>Calculates pay for multiple employees</li>
-            <li>Validates incorrect inputs and provides feedback</li>
-            <li>Uses arrays for employee details, hours, and pay rate</li>
-        </ul>
+        <div class="card">
+            <h3>Employee Report - Creator</h3>
+            <ul>
+                <li>Calculates pay for multiple employees</li>
+                <li>Validates incorrect inputs and provides feedback</li>
+                <li>Uses arrays for employee details, hours, and pay rate</li>
+            </ul>
+        </div>
     </section>
 
     <section id="education">
         <h2>Education</h2>
-        <p><strong>College of Southern Nevada</strong> | Currently Second Year</p>
-        <p>Bachelor’s in Computer Science | Est. 2027</p>
+        <div class="card">
+            <p><strong>College of Southern Nevada</strong> | Currently Second Year</p>
+            <p>Bachelor’s in Computer Science | Est. 2027</p>
+        </div>
     </section>
 
     <section id="skills">
         <h2>Skills</h2>
-        <ul>
-            <li>Programming: Entry-level experience with Python</li>
-            <li>Software: Microsoft Word, PowerPoint, Excel, OneNote</li>
-            <li>Operating Systems: MacOS, Windows</li>
-        </ul>
+        <div class="card">
+            <ul>
+                <li>Programming: Entry-level experience with Python</li>
+                <li>Software: Microsoft Word, PowerPoint, Excel, OneNote</li>
+                <li>Operating Systems: MacOS, Windows</li>
+            </ul>
+        </div>
     </section>
 
     <section id="affiliations">
         <h2>Affiliations & Interests</h2>
-        <p><strong>Goalkeeper Captain</strong> | Downtown Soccer Club (2020-2022)</p>
-        <p><strong>Explorer Volunteer</strong> | Las Vegas Metropolitan Police Department (2021-2023)</p>
+        <div class="card">
+            <p><strong>Goalkeeper Captain</strong> | Downtown Soccer Club (2020-2022)</p>
+            <p><strong>Explorer Volunteer</strong> | Las Vegas Metropolitan Police Department (2021-2023)</p>
+        </div>
     </section>
 
     <footer>
