--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 </head>
 <body>
     <header>
+        <img src="profile_picture.jpg" alt="Eduardo Zavala" class="profile-pic">
         <h1>Eduardo Zavala</h1>
         <p>Las Vegas, NV | Bilingual | <a href="mailto:ezavala15@icloud.com">ezavala15@icloud.com</a></p>
         <button id="theme-toggle">Toggle Light/Dark Mode</button>
@@ -16,81 +17,24 @@
 
     <section id="experience">
         <h2>Relevant Experience</h2>
-        <div class="card">
-            <h3>CIT 129 Python | College of Southern Nevada</h3>
-            <ul>
-                <li>Actively learning the basics of using Python</li>
-                <li>Learning how to use arrays and different looping methods</li>
-            </ul>
-        </div>
-
-        <div class="card">
-            <h3>CIT 129 Raptor | College of Southern Nevada</h3>
-            <ul>
-                <li>Learning the use of Raptor as a layout for any code</li>
-                <li>Understanding arrays and looping methods in Raptor</li>
-            </ul>
-        </div>
-
-        <div class="card">
-            <h3>Customer Service | Sam’s Club</h3>
-            <ul>
-                <li>Helping members troubleshoot account problems</li>
-                <li>Troubleshooting errors with the app or at the gas station</li>
-                <li>Cashiering and assisting members at checkout</li>
-            </ul>
-        </div>
+        <div class="card"><h3>CIT 129 Python | College of Southern Nevada</h3>
+            <ul><li>Actively learning Python</li><li>Using arrays & loops</li></ul></div>
+        <div class="card"><h3>Customer Service | Sam’s Club</h3>
+            <ul><li>Helped members troubleshoot issues</li><li>Cashiering duties</li></ul></div>
     </section>
 
     <section id="projects">
         <h2>Projects</h2>
-        <div class="card">
-            <h3>List of Numbers - Creator</h3>
-            <ul>
-                <li>Asks user for two numbers, ensuring the first is lower</li>
-                <li>Lists all numbers in between, categorizing them as even or odd</li>
-            </ul>
-        </div>
-
-        <div class="card">
-            <h3>Employee Report - Creator</h3>
-            <ul>
-                <li>Calculates pay for multiple employees</li>
-                <li>Validates incorrect inputs and provides feedback</li>
-                <li>Uses arrays for employee details, hours, and pay rate</li>
-            </ul>
-        </div>
+        <div class="card"><h3>List of Numbers - Creator</h3>
+            <ul><li>Lists numbers & categorizes as even/odd</li></ul></div>
+        <div class="card"><h3>Employee Report - Creator</h3>
+            <ul><li>Calculates pay, validates input</li></ul></div>
     </section>
 
-    <section id="education">
-        <h2>Education</h2>
-        <div class="card">
-            <p><strong>College of Southern Nevada</strong> | Currently Second Year</p>
-            <p>Bachelor’s in Computer Science | Est. 2027</p>
-        </div>
+    <section id="education"><h2>Education</h2>
+        <div class="card"><p><strong>College of Southern Nevada</strong> | CS Major (Est. 2027)</p></div>
     </section>
 
-    <section id="skills">
-        <h2>Skills</h2>
-        <div class="card">
-            <ul>
-                <li>Programming: Entry-level experience with Python</li>
-                <li>Software: Microsoft Word, PowerPoint, Excel, OneNote</li>
-                <li>Operating Systems: MacOS, Windows</li>
-            </ul>
-        </div>
-    </section>
-
-    <section id="affiliations">
-        <h2>Affiliations & Interests</h2>
-        <div class="card">
-            <p><strong>Goalkeeper Captain</strong> | Downtown Soccer Club (2020-2022)</p>
-            <p><strong>Explorer Volunteer</strong> | Las Vegas Metropolitan Police Department (2021-2023)</p>
-        </div>
-    </section>
-
-    <footer>
-        <p>&copy; 2025 Eduardo Zavala | <a href="mailto:ezavala15@icloud.com">Contact Me</a></p>
-    </footer>
+    <footer><p>&copy; 2025 Eduardo Zavala | <a href="mailto:ezavala15@icloud.com">Contact Me</a></p></footer>
 </body>
 </html>
