--- a/index.html
+++ b/index.html
@@ -6,74 +6,14 @@
     <title>Eduardo Zavala - Portfolio</title>
     <link rel="stylesheet" href="styles.css">
     <script defer src="script.js"></script>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            background-color: #121212;
-            color: white;
-            margin: 0;
-            padding: 0;
-        }
-        header {
-            background-color: #333;
-            color: white;
-            padding: 20px;
-            text-align: center;
-        }
-        header img {
-            width: 100px;
-            border-radius: 50%;
-        }
-        nav {
-            background-color: #444;
-            padding: 10px;
-            text-align: center;
-        }
-        nav a {
-            color: white;
-            text-decoration: none;
-            margin: 0 15px;
-            font-size: 18px;
-        }
-        nav a:hover {
-            text-decoration: underline;
-        }
-        section {
-            padding: 20px;
-        }
-        .card {
-            background-color: #222;
-            margin-bottom: 15px;
-            padding: 15px;
-            border-radius: 8px;
-        }
-        footer {
-            background-color: #333;
-            color: white;
-            text-align: center;
-            padding: 15px;
-            position: fixed;
-            width: 100%;
-            bottom: 0;
-        }
-    </style>
 </head>
 <body>
-
     <header>
         <img src="profile_picture.jpg" alt="Eduardo Zavala" class="profile-pic">
         <h1>Eduardo Zavala</h1>
         <p>Las Vegas, NV | Bilingual | <a href="mailto:ezavala15@icloud.com">ezavala15@icloud.com</a></p>
         <button id="theme-toggle">Toggle Light/Dark Mode</button>
     </header>
-
-    <!-- Navigation Bar -->
-    <nav>
-        <a href="#experience">Experience</a>
-        <a href="#projects">Projects</a>
-        <a href="#education">Education</a>
-        <a href="#contact">Contact Me</a>
-    </nav>
 
     <section id="experience">
         <h2>Relevant Experience</h2>
@@ -95,9 +35,6 @@
         <div class="card"><p><strong>College of Southern Nevada</strong> | CS Major (Est. 2027)</p></div>
     </section>
 
-    <footer>
-        <p>&copy; 2025 Eduardo Zavala | <a href="mailto:ezavala15@icloud.com">Contact Me</a></p>
-    </footer>
-
+    <footer><p>&copy; 2025 Eduardo Zavala | <a href="mailto:ezavala15@icloud.com">Contact Me</a></p></footer>
 </body>
 </html>
