--- a/index.html
+++ b/index.html
@@ -19,6 +19,9 @@
         <h2>Relevant Experience</h2>
         <div class="card"><h3>CIT 129 Python | College of Southern Nevada</h3>
             <ul><li>Actively learning Python</li><li>Using arrays & loops</li></ul></div>
+            <h3>CIT 129 Raptor | College of Southern Nevada</h3>
+            <ul><li>Learning the use of Raptor as a layout for any code</li>
+                <li>Understanding arrays and looping methods in Raptor</li>
         <div class="card"><h3>Customer Service | Sam’s Club</h3>
             <ul><li>Helped members troubleshoot issues</li><li>Cashiering duties</li></ul></div>
     </section>
