--- a/index.html
+++ b/index.html
@@ -16,31 +16,95 @@
 
     <section id="experience">
         <h2>Relevant Experience</h2>
-        <div class="card"><h3>CIT 129 Python | College of Southern Nevada</h3>
-            <ul><li>Actively learning Python</li><li>Using arrays & loops</li></ul></div>
         <div class="card">
-            <h3>CIT 129 Raptor | College of Southern Nevada</h3>
+            <h3>CIT 129 Python | College of Southern Nevada</h3>
+            <p><strong>Duration:</strong> Spring 2024 - Present</p>
             <ul>
-                <li>Learning the use of Raptor as a layout for any code</li>
-                <li>Understanding arrays and looping methods in Raptor</li>
+                <li>Actively learning Python and its usage for scripting and automation.</li>
+                <li>Understanding and applying basic programming concepts such as arrays, loops, and conditionals.</li>
+                <li>Developing small applications and solving problems through Python programming.</li>
             </ul>
         </div>
-        <div class="card"><h3>Customer Service | Sam’s Club</h3>
-            <ul><li>Helped members troubleshoot issues</li><li>Cashiering duties</li></ul></div>
+
+        <div class="card">
+            <h3>CIT 129 Raptor | College of Southern Nevada</h3>
+            <p><strong>Duration:</strong> Fall 2023 - Present</p>
+            <ul>
+                <li>Learning the use of Raptor as a visual programming language for algorithm design.</li>
+                <li>Developing an understanding of arrays, loops, and basic logic through the use of flowcharts and pseudo-code.</li>
+                <li>Building basic programs to solve real-world problems using Raptor.</li>
+            </ul>
+        </div>
+
+        <div class="card">
+            <h3>Customer Service | Sam’s Club</h3>
+            <p><strong>Duration:</strong> June 2022 - August 2023</p>
+            <ul>
+                <li>Assisted customers with troubleshooting product-related issues and provided technical support.</li>
+                <li>Performed cashiering duties including processing transactions, handling cash, and providing receipts.</li>
+                <li>Maintained store cleanliness and product organization to ensure an optimal shopping experience.</li>
+            </ul>
+        </div>
     </section>
 
     <section id="projects">
         <h2>Projects</h2>
-        <div class="card"><h3>List of Numbers - Creator</h3>
-            <ul><li>Lists numbers & categorizes as even/odd</li></ul></div>
-        <div class="card"><h3>Employee Report - Creator</h3>
-            <ul><li>Calculates pay, validates input</li></ul></div>
+        <div class="card">
+            <h3>List of Numbers - Creator</h3>
+            <p><strong>Description:</strong> A Python-based program to categorize numbers as even or odd.</p>
+            <ul>
+                <li>Developed a program that takes user input and categorizes a list of numbers as even or odd.</li>
+                <li>Implemented basic input validation and error handling to ensure accurate user interaction.</li>
+                <li>Used loops and conditionals to iterate through the list and classify each number accordingly.</li>
+            </ul>
+        </div>
+
+        <div class="card">
+            <h3>Employee Report - Creator</h3>
+            <p><strong>Description:</strong> A Python-based program to calculate employee pay and validate input.</p>
+            <ul>
+                <li>Developed a tool to calculate employee pay based on hours worked and pay rate.</li>
+                <li>Ensured that the input was valid, such as checking that the number of hours worked was non-negative.</li>
+                <li>Implemented a simple report generation for employees that includes pay calculation and work hours.</li>
+            </ul>
+        </div>
     </section>
 
-    <section id="education"><h2>Education</h2>
-        <div class="card"><p><strong>College of Southern Nevada</strong> | CS Major (Est. 2027)</p></div>
+    <section id="education">
+        <h2>Education</h2>
+        <div class="card">
+            <p><strong>College of Southern Nevada</strong> | CS Major (Est. 2027)</p>
+            <p><strong>Relevant Coursework:</strong> Introduction to Programming, Data Structures, Algorithms, Web Development.</p>
+            <p><strong>Current GPA:</strong> 3.8 (as of Fall 2024)</p>
+        </div>
     </section>
 
-    <footer><p>&copy; 2025 Eduardo Zavala | <a href="mailto:ezavala15@icloud.com">Contact Me</a></p></footer>
+    <section id="skills">
+        <h2>Skills</h2>
+        <div class="card">
+            <h3>Programming Languages & Tools</h3>
+            <ul>
+                <li>Python</li>
+                <li>Raptor (Flowchart-based Programming)</li>
+                <li>JavaScript (Beginner)</li>
+                <li>HTML, CSS (Beginner)</li>
+                <li>Microsoft Office Suite (Word, Excel, PowerPoint)</li>
+            </ul>
+        </div>
+
+        <div class="card">
+            <h3>Soft Skills</h3>
+            <ul>
+                <li>Effective communication (both written and verbal)</li>
+                <li>Problem-solving and critical thinking</li>
+                <li>Team collaboration and customer service experience</li>
+                <li>Time management and organizational skills</li>
+            </ul>
+        </div>
+    </section>
+
+    <footer>
+        <p>&copy; 2025 Eduardo Zavala | <a href="mailto:ezavala15@icloud.com">Contact Me</a></p>
+    </footer>
 </body>
 </html>
