--- a/index.html
+++ b/index.html
@@ -73,9 +73,8 @@
     <section id="education">
         <h2>Education</h2>
         <div class="card">
-            <p><strong>College of Southern Nevada</strong> | CS Major (Est. 2027)</p>
+            <p><strong>University of Nevada, Las Vegas</strong> | Computer Science Major (Est. 2027)</p>
             <p><strong>Relevant Coursework:</strong> Introduction to Programming, Data Structures, Algorithms, Web Development.</p>
-            <p><strong>Current GPA:</strong> 3.8 (as of Fall 2024)</p>
         </div>
     </section>
 
