--- a/index.html
+++ b/index.html
@@ -74,7 +74,8 @@
         <h2>Education</h2>
         <div class="card">
             <p><strong>University of Nevada, Las Vegas</strong> | Computer Science Major (Est. 2027)</p>
-            <p><strong>Relevant Coursework:</strong> Introduction to Programming, Data Structures, Algorithms, Web Development.</p>
+            <p><strong>Relevant Coursework:</strong> Introduction to Programming, 2D Design</p>
+            <p><strong>CS50: Introduction to Python</strong></p>
         </div>
     </section>
 
@@ -98,6 +99,7 @@
                 <li>Problem-solving and critical thinking</li>
                 <li>Team collaboration and customer service experience</li>
                 <li>Time management and organizational skills</li>
+                <li>Fluent in writing, reading, and speaking Spanish</li>
             </ul>
         </div>
     </section>
