--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
         <div class="card">
             <p><strong>University of Nevada, Las Vegas</strong> | Computer Science Major (Est. 2027)</p>
             <p><strong>Relevant Coursework:</strong> Introduction to Programming, 2D Design</p>
-            <p><strong>CS50: Introduction to Python</strong></p>
+            <p><strong>CS50 Introduction to Python:</strong> Introduces fundamentals of Python with multiple projects</p>
         </div>
     </section>
 
